--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
   "bugs": {
     "url": "https://github.com/ripterdust/circleci_helloworld/issues"
   },
-  "homepage": "https://github.com/ripterdust/circleci_helloworld#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "homepage": "https://github.com/ripterdust/circleci_helloworld#readme"
 }
